Fixed Text Alignment and padding

--- a/sustainability/src/components/AboutUs/AboutUs.css
+++ b/sustainability/src/components/AboutUs/AboutUs.css
@@ -73,6 +73,7 @@
 
   .abt {
     text-align: center;
+    font-size: 32px;
     padding-top: 20px;
   }
 
