--- a/sustainability/src/components/MainList/MainList.css
+++ b/sustainability/src/components/MainList/MainList.css
@@ -30,5 +30,6 @@
 h4 {
     margin-left: 95px;
     text-align: center;
-    font-size: 25px;
+    font-size: 32px;
+    padding-top: 20px;
 }
